[package]
name = "comm"
version = "0.1.0"
authors = ["Zac Stewart <zgstewart@gmail.com>"]
build = "build.rs"

[lib]
name = "comm"

[[bin]]
name = "comm"

[dependencies]
env_logger = "0.3.3"
mio = "0.5.0"
num = "0.1.31"
log = "0.3.6"
protobuf = "1.0.18"
rand = "0.3.14"
rust-crypto = "0.2.35"
rustc-serialize = "0.3.19"
time = "0.1.35"
